src/components/popup/details/details.less
@import '../../../style/variables';

.details {
	display: flex;
	flex-direction: column;
	flex: 1;
	height: 100%;

	//scrollbar
	::-webkit-scrollbar {
		width: 6px;
		height: 6px;
	}

	::-webkit-scrollbar-track {
		box-shadow: inset 0 0 4px white;
		border-radius: 4px;
		background-color: #f1f1f1;
	}

	::-webkit-scrollbar-thumb {
		border-radius: 4px;
		background: #e1e1e1;
		opacity: 0.5;
		box-shadow: none;
	}
	//end scrollbar

	.body {
		flex: 1;
		min-height: 0;
		overflow: auto;
		-webkit-overflow-scrolling: touch;

		@media @smartphone {
			padding: 40px 5px 5px 5px;
		}
	}

	.footer {
		display: flex;
		margin: 20px auto;

	}

	.save {
		margin: 0px auto;
	}

	.back {
		margin-right: 20px;
	}
}

.title {
	font-weight: bold;
	font-size: 20px;
	padding: 0px;
	margin-bottom: 24px;
	color: @color-titleColor;

	@media @smartphone {
		font-size: 18px;
	}
}

.description {
	padding-bottom: 20px;
	color: @color-textLight;
	font-size: 14px;
	line-height: 24px;
}

